--- a/paper/references.bib
+++ b/paper/references.bib
@@ -143,5 +143,11 @@
     note = "[Accessed: April 15, 2023]"
 }
 
-
+@misc{InvestopediaInv,
+    author = "{Adam Hayes}",
+    title = "{The Best Ways to Invest in Gold Without Holding It}",
+    howpublished = "\url{https://www.investopedia.com/articles/investing/062515/best-ways-invest-gold-without-holding-it.asp}",
+    year = "2023",
+    note = "[Accessed: April 16, 2023]"
+}
 
